Fix #9412: Checkbox alignment with label

--- a/theme-base/components/input/_checkbox.scss
+++ b/theme-base/components/input/_checkbox.scss
@@ -1,10 +1,11 @@
 body {
   .ui-chkbox {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     vertical-align: middle;
     margin: 0;
-    width: $checkboxWidth;
-    height: $checkboxHeight;
+    width: auto;
+    height: auto;
 
     .ui-chkbox-box {
       border: $inputBorder;
